solved 3rd task

--- a/lab1/task3.ui
+++ b/lab1/task3.ui
@@ -2,5 +2,10 @@
 <interface>
   <object id="window" class="GtkWindow">
     <property name="title">Задание3</property>
+    <child>
+      <object id="label" class="GtkLabel">
+        <property name="label"></property>
+      </object>
+    </child>
   </object>
 </interface>
