--- a/lab1/styles.css
+++ b/lab1/styles.css
@@ -1,3 +1,10 @@
-.error {
-    color: red;
+window.background { 
+    font-size: 15px; 
+    font-style: italic;
+}
+.red-background {
+    background-color:red;
+}
+.green-background {
+    background-color:green;
 }
